# resumetry

./: .gitignore  .out  README.md  justfile  main.py  pyproject.toml  requirements.txt  utils.py
resumetry/: main.py  validators.py
src/resumetry/: cli.py  utils.py  validators.py
src/resumetry/templates/main/: main.tex  main.yaml
src/resumetry/templates/sample/: sample.tex
templates/sample/: sample.yaml
