[project]
name = "resumetry"
version = "0.1.5"
description = "config + template (LaTeX)→ PDF generator"
readme = "README.md"
authors = [
    { name = "Azimjon Ilkhomov", email = "ajilkhomov@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "typer>=0.17.4",
]

[project.scripts]
resumetry = "resumetry.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
